# snowlib

./: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  main.h
matrixOperations/: matrixOp.cpp  matrixOp.h
render/: render.cpp  render.h
shaders/: fragment.glsl  vertex.glsl
window/: window.cpp  window.h
